Merge branch 1.2.1 into main (#7)
* 支持PostgreSQL

* 新增spring-boot-starter-nextentity

* 新增spring-boot-starter-nextentity

* 重构Metamodel

* 重构Metamodel

* 删除lombok依赖

* 精简代码

* temp

* 1.2.0

* 增加自动注册Repository Bean开关

* 1.2.1

* 1.2.1

* 增加updatable属性

* 新增ReadonlyJdbcRepository

* 修复select返回类型错误

* 添加注释

* 修改 SelectOrderByStep 接口定义

* 添加注释

* fix(core): 修正类加载器使用及升级Lombok版本

- 将MethodType解析时的类加载器改为线程上下文类加载器
- 升级pom文件中Lombok版本至1.18.42以支持新特性和修复问题

* fix(core): 修正ClassLoader获取方式以避免线程上下文问题

- 将ClassLoader从线程上下文ClassLoader切换为当前类的ClassLoader
- 修复序列化Lambda处理过程中可能出现的类加载异常
- 提高代码稳定性和兼容性
- 优化方法类型的反射获取逻辑

* fix(core): Corrects the way the class loader

---------

Co-authored-by: huang <huang.chengwei@foxmail.com>
Co-authored-by: huang.chengwei <huang.chengwei@outlook.com>